--- a/SGI/templates/SGI/documentos/cargar-documento.html
+++ b/SGI/templates/SGI/documentos/cargar-documento.html
@@ -26,7 +26,7 @@
                         {% input_number_tag 'version' 'Versión' placeholder="Ingrese la versión del documento"  required="" modal=True min=version max="9999.9" step="0.1" value=version mensaje_validacion='Por favor digite una version mayor a la anterior.' invalido=errores.version %}
                     </div>
                     <div class="m-b-10">
-                        {% input_textarea_tag 'notas' 'Notas' type="textarea" placeholder="Digite una nota"  maxlength="100" required="" modal=True value=archivo.notas mensaje_validacion='Por favor ingrese una nota' invalido=errores.notas %}
+                        {% input_textarea_tag 'notas' 'Notas' type="textarea" placeholder="Digite una nota o los cambios realizados al documento."  maxlength="100" required="" modal=True value=archivo.notas mensaje_validacion='Por favor ingrese una nota' invalido=errores.notas %}
                     </div>
                 </div>
                 <div class="form-row">
