--- a/TalentoHumano/templates/TalentoHumano/_common/menu_aplicacion.html
+++ b/TalentoHumano/templates/TalentoHumano/_common/menu_aplicacion.html
@@ -1,13 +1,17 @@
- <li>
+{% if perms.TalentoHumano.view_entidadescafe %}
+<li>
     <a href="{% url 'TalentoHumano:entidades-cafe-index' 0 %}" title="Entidades CAFE" data-filter-tags="entidades cafe">
         <i class="far fa-hand-receiving"></i>
         <span class="nav-link-text" data-i18n="nav.talentohumano_entidades-cafe">Entidades CAFE</span>
     </a>
- </li>
-  <li>
+</li>
+{% endif%}
+{% if perms.TalentoHumano.view_colaborador %}
+<li>
     <a href="{% url 'TalentoHumano:colaboradores-index' 0 %}" title="Colaboradores" data-filter-tags="Colaboradores">
         <i class="far fa-user"></i>
         <span class="nav-link-text" data-i18n="nav.talentohumano_perfil-colaboradores">Colaboradores</span>
     </a>
- </li>
+</li>
+{% endif %}
 
