--- a/Financiero/templates/Financiero/Facturacion/Facturas/index.html
+++ b/Financiero/templates/Financiero/Facturacion/Facturas/index.html
@@ -18,16 +18,20 @@
         </div>
     </div>
     <div id="panel-3" class="panel">
+        {% if perms.Financiero.add_facturaencabezado %}
         <div class="panel-hdr">
             <small>
                 <a class="far fa-3x far fa-plus-circle"  href="{% url 'Financiero:factura-crea' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Crear factura"></a>
             </small>
         </div>
+        {% endif %}
         <div class="panel-container show">
             <div class="panel-content">
                 <ul class="nav nav-tabs" role="tablist">
                     <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#tab_generadas" role="tab">Generadas</a></li>
+                    {% if perms.Financiero.change_facturaencabezado %}
                     <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#tab_borradores" role="tab">Borradores</a></li>
+                    {% endif %}
                 </ul>
                 <div class="tab-content p-3">
                     <div class="tab-pane fade show active" id="tab_generadas" role="tabpanel">
@@ -89,7 +93,9 @@
                                             <td>{{ factura.usuario_crea.username}}</td>
                                             <td>
                                                 <a class="far fa-2x fa-eye" href="{% url 'Financiero:factura-imprimir' factura.id %}"></a>
+                                                {% if perms.Financiero.change_facturaencabezado %}
                                                 <a class="far fa-2x fa-edit"  href="{% url 'Financiero:factura-editar' factura.id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Editar"></a>
+                                                {% endif %}
                                             </td>
                                         </tr>
                                     {% endfor %}
