--- a/SGI/templates/SGI/_common/menu_aplicacion.html
+++ b/SGI/templates/SGI/_common/menu_aplicacion.html
@@ -1,3 +1,4 @@
+{%  if perms.SGI.view_documento %}
 {% for proceso in procesos %}
 <li>
     <a href="#" title="{{ proceso.nombre }}" data-filter-tags="form plugins">
@@ -14,3 +15,4 @@
     </ul>
 </li>
 {% endfor %}
+{% endif %}
