EVA-54 Refactor: Se corrige el nombre de la ruta de boton para crear factura Por que se cambió el nombre de la ruta en las urls

--- a/Financiero/templates/Financiero/Facturacion/Facturas/index.html
+++ b/Financiero/templates/Financiero/Facturacion/Facturas/index.html
@@ -21,7 +21,7 @@
         {% if perms.Financiero.add_facturaencabezado %}
         <div class="panel-hdr">
             <small>
-                <a class="far fa-3x far fa-plus-circle"  href="{% url 'Financiero:factura-crea' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Crear factura"></a>
+                <a class="far fa-3x far fa-plus-circle"  href="{% url 'Financiero:factura-crear' %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Crear factura"></a>
             </small>
         </div>
         {% endif %}
