EVA-57 Feat: Se agrega el llamado del js de notificaciones al template base

--- a/EVA/templates/EVA/_common/base.html
+++ b/EVA/templates/EVA/_common/base.html
@@ -150,6 +150,7 @@
         <script src="{% static 'EVA/Plantilla/js/custom/notificaciones_eva.js' %}"></script>
         <script src="{% static 'Administracion/js/seleccionEmpresa.js' %}"></script>
         <script src="{% static 'EVA/Plantilla/js/custom/ajaxDjango.js' %}"></script>
+        <script src="{% static 'Notificaciones/js/cargarNotificaciones.js' %}"></script>
 
        {% block scripts %}
        {% endblock %}
