EVA-57 Feat: Se agregan modificaciones para controlar el icono del numero de notificaciones. Se edita el header para quitar los textos predefinidos y poner id's para controlar sus textos Se configura el js para que dependiendo de la respuesta establezca el icono de las notificaciones

--- a/EVA/templates/EVA/_common/header.html
+++ b/EVA/templates/EVA/_common/header.html
@@ -43,9 +43,9 @@
     <div class="ml-auto d-flex">
         <!-- app notification -->
         <div>
-            <a href="#" class="header-icon" data-toggle="dropdown" title="You got 11 notifications">
+            <a href="#" class="header-icon" data-toggle="dropdown" id="titulo_not">
                 <i class="fal fa-bell"></i>
-                <span class="badge badge-icon">11</span>
+                <span class="badge badge-icon" id="icono_not"></span>
             </a>
             <div class="dropdown-menu dropdown-menu-animated dropdown-xl">
                 <div class="dropdown-header bg-trans-gradient d-flex justify-content-center align-items-center rounded-top mb-2">
