--- a/EVA/templates/EVA/_common/header.html
+++ b/EVA/templates/EVA/_common/header.html
@@ -56,7 +56,7 @@
                 </div>
                 <ul class="nav nav-tabs nav-tabs-clean" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link px-4 fs-md js-waves-on fw-500" data-toggle="tab" href="#tab-messages" data-i18n="drpdwn.messages">Notificaciones</a>
+                        <a class="nav-link px-4 fs-md js-waves-on fw-500" data-toggle="tab" href="#tab-messages" data-i18n="dropdown.messages">Notificaciones</a>
                     </li>
                 </ul>
                 <div class="tab-content tab-notification">
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="py-2 px-3 bg-faded d-block rounded-bottom text-right border-faded border-bottom-0 border-right-0 border-left-0">
-                    <a id="ver_todas" disabled="" href="#" class="fs-xs fw-500 ml-auto">Ver todas</a>
+                    <a id="ver_todas" disabled="" href="{% url 'notificaciones:notificaciones-ver-todas' %}" class="fs-xs fw-500 ml-auto">Ver todas</a>
                 </div>
             </div>
         </div>
